// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`collate.linux.utf8.sql > line 17 1`] = `
[
  "CREATE SCHEMA collate_tests",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "schemaname": "collate_tests",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 33 1`] = `
[
  "CREATE TABLE collate_test_fail (
    a int,
    b text COLLATE "foo"
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test_fail",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 37,
                  "typeName": {
                    "location": 39,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "collClause": {
                    "collname": [
                      {
                        "String": {
                          "sval": "foo",
                        },
                      },
                    ],
                    "location": 55,
                  },
                  "colname": "b",
                  "is_local": true,
                  "location": 48,
                  "typeName": {
                    "location": 50,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 38 1`] = `
[
  "CREATE TABLE collate_test_fail (
    a int COLLATE "en_US",
    b text
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test_fail",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "collClause": {
                    "collname": [
                      {
                        "String": {
                          "sval": "en_US",
                        },
                      },
                    ],
                    "location": 43,
                  },
                  "colname": "a",
                  "is_local": true,
                  "location": 37,
                  "typeName": {
                    "location": 39,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 64,
                  "typeName": {
                    "location": 66,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 43 1`] = `
[
  "CREATE TABLE collate_test_like (
    LIKE collate_test1
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test_like",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "TableLikeClause": {
                  "relation": {
                    "inh": true,
                    "location": 42,
                    "relname": "collate_test1",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 54 1`] = `
[
  "CREATE TABLE collate_test3 (
    a int,
    b text COLLATE "C"
)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test3",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "location": 35,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "collClause": {
                    "collname": [
                      {
                        "String": {
                          "sval": "C",
                        },
                      },
                    ],
                    "location": 51,
                  },
                  "colname": "b",
                  "is_local": true,
                  "location": 44,
                  "typeName": {
                    "location": 46,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 59 1`] = `
[
  "INSERT INTO collate_test1 VALUES (1, 'abc'), (2, 'äbc'), (3, 'bbc'), (4, 'ABC');",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "collate_test1",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 34,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 37,
                            "sval": {
                              "sval": "abc",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 46,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 49,
                            "sval": {
                              "sval": "äbc",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 3,
                            },
                            "location": 59,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 62,
                            "sval": {
                              "sval": "bbc",
                            },
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 4,
                            },
                            "location": 71,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 74,
                            "sval": {
                              "sval": "ABC",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
        "stmt_len": 80,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 60 1`] = `
[
  "INSERT INTO collate_test2 SELECT * FROM collate_test1;",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "collate_test2",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "collate_test1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
        "stmt_len": 53,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 61 1`] = `
[
  "INSERT INTO collate_test3 SELECT * FROM collate_test1;",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "collate_test3",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "collate_test1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
        "stmt_len": 53,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 64 1`] = `
[
  "SELECT * FROM collate_test2 WHERE b >= 'bbc';",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 36,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 39,
                    "sval": {
                      "sval": "bbc",
                    },
                  },
                },
              },
            },
          },
        },
        "stmt_len": 44,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 65 1`] = `
[
  "SELECT * FROM collate_test3 WHERE b >= 'bbc';",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test3",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 36,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 39,
                    "sval": {
                      "sval": "bbc",
                    },
                  },
                },
              },
            },
          },
        },
        "stmt_len": 44,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 69 1`] = `
[
  "SELECT * FROM collate_test1 WHERE b >= 'bbc' COLLATE "C";",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 36,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "CollateClause": {
                    "arg": {
                      "A_Const": {
                        "location": 39,
                        "sval": {
                          "sval": "bbc",
                        },
                      },
                    },
                    "collname": [
                      {
                        "String": {
                          "sval": "C",
                        },
                      },
                    ],
                    "location": 45,
                  },
                },
              },
            },
          },
        },
        "stmt_len": 56,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 70 1`] = `
[
  "SELECT * FROM collate_test1 WHERE b COLLATE "C" >= 'bbc' COLLATE "C";",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "CollateClause": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "b",
                            },
                          },
                        ],
                        "location": 34,
                      },
                    },
                    "collname": [
                      {
                        "String": {
                          "sval": "C",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "location": 48,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "CollateClause": {
                    "arg": {
                      "A_Const": {
                        "location": 51,
                        "sval": {
                          "sval": "bbc",
                        },
                      },
                    },
                    "collname": [
                      {
                        "String": {
                          "sval": "C",
                        },
                      },
                    ],
                    "location": 57,
                  },
                },
              },
            },
          },
        },
        "stmt_len": 68,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 71 1`] = `
[
  "SELECT * FROM collate_test1 WHERE b COLLATE "C" >= 'bbc' COLLATE "en_US";",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "CollateClause": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "b",
                            },
                          },
                        ],
                        "location": 34,
                      },
                    },
                    "collname": [
                      {
                        "String": {
                          "sval": "C",
                        },
                      },
                    ],
                    "location": 36,
                  },
                },
                "location": 48,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "CollateClause": {
                    "arg": {
                      "A_Const": {
                        "location": 51,
                        "sval": {
                          "sval": "bbc",
                        },
                      },
                    },
                    "collname": [
                      {
                        "String": {
                          "sval": "en_US",
                        },
                      },
                    ],
                    "location": 57,
                  },
                },
              },
            },
          },
        },
        "stmt_len": 72,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 74 1`] = `
[
  "CREATE DOMAIN testdomain_sv AS text COLLATE "sv_SE";",
  {
    "stmts": [
      {
        "stmt": {
          "CreateDomainStmt": {
            "collClause": {
              "collname": [
                {
                  "String": {
                    "sval": "sv_SE",
                  },
                },
              ],
              "location": 36,
            },
            "domainname": [
              {
                "String": {
                  "sval": "testdomain_sv",
                },
              },
            ],
            "typeName": {
              "location": 31,
              "names": [
                {
                  "String": {
                    "sval": "text",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
        "stmt_len": 51,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 75 1`] = `
[
  "CREATE DOMAIN testdomain_i AS int COLLATE "sv_SE";",
  {
    "stmts": [
      {
        "stmt": {
          "CreateDomainStmt": {
            "collClause": {
              "collname": [
                {
                  "String": {
                    "sval": "sv_SE",
                  },
                },
              ],
              "location": 34,
            },
            "domainname": [
              {
                "String": {
                  "sval": "testdomain_i",
                },
              },
            ],
            "typeName": {
              "location": 30,
              "names": [
                {
                  "String": {
                    "sval": "pg_catalog",
                  },
                },
                {
                  "String": {
                    "sval": "int4",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
        "stmt_len": 49,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 76 1`] = `
[
  "CREATE TABLE collate_test4 (
    a int,
    b testdomain_sv
);",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "collate_test4",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 33,
                  "typeName": {
                    "location": 35,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 44,
                  "typeName": {
                    "location": 46,
                    "names": [
                      {
                        "String": {
                          "sval": "testdomain_sv",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 61,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 80 1`] = `
[
  "INSERT INTO collate_test4 SELECT * FROM collate_test1;",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "collate_test4",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "collate_test1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
        "stmt_len": 53,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 81 1`] = `
[
  "SELECT a, b FROM collate_test4 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "collate_test4",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 40,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 41,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 87 1`] = `
[
  "INSERT INTO collate_test5 SELECT * FROM collate_test1;",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "collate_test5",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 40,
                      "relname": "collate_test1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 33,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 33,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
        "stmt_len": 53,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 88 1`] = `
[
  "SELECT a, b FROM collate_test5 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "collate_test5",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 40,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 41,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 91 1`] = `
[
  "SELECT a, b FROM collate_test1 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 40,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 41,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 92 1`] = `
[
  "SELECT a, b FROM collate_test2 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "collate_test2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 40,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 41,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 93 1`] = `
[
  "SELECT a, b FROM collate_test3 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 17,
                  "relname": "collate_test3",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 40,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 10,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 41,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 98 1`] = `
[
  "SELECT * FROM collate_test1 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 37,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 38,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 99 1`] = `
[
  "SELECT * FROM collate_test2 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test2",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 37,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 38,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 100 1`] = `
[
  "SELECT * FROM collate_test3 ORDER BY b;",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "collate_test3",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "b",
                          },
                        },
                      ],
                      "location": 37,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 38,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 103 1`] = `
[
  "SELECT 'bbc' COLLATE "en_US" > 'äbc' COLLATE "en_US" AS "true";
",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "true",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "CollateClause": {
                          "arg": {
                            "A_Const": {
                              "location": 7,
                              "sval": {
                                "sval": "bbc",
                              },
                            },
                          },
                          "collname": [
                            {
                              "String": {
                                "sval": "en_US",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                      "location": 29,
                      "name": [
                        {
                          "String": {
                            "sval": ">",
                          },
                        },
                      ],
                      "rexpr": {
                        "CollateClause": {
                          "arg": {
                            "A_Const": {
                              "location": 31,
                              "sval": {
                                "sval": "äbc",
                              },
                            },
                          },
                          "collname": [
                            {
                              "String": {
                                "sval": "en_US",
                              },
                            },
                          ],
                          "location": 38,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_len": 63,
      },
    ],
    "version": 160001,
  },
]
`;

exports[`collate.linux.utf8.sql > line 179 1`] = `
[
  "SET lc_time TO 'tr_TR';
SELECT to_cha",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 15,
                  "sval": {
                    "sval": "tr_TR",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "lc_time",
          },
        },
        "stmt_len": 22,
      },
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 31,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "to_cha",
                          },
                        },
                      ],
                      "location": 31,
                    },
                  },
                },
              },
            ],
          },
        },
        "stmt_location": 23,
      },
    ],
    "version": 160001,
  },
]
`;
